fixed bg not showing

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
   background-color: #5F193D;
-  /* background-image: url("assets/NEW_background_pattern.svg"); */
+  background-image: url("./assets/NEW_background_pattern.svg");
   background-repeat: repeat;
   background-size: auto 18rem;
   width: 100%;
